// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Snapshots > matches checked state snapshot 1`] = `
<button
  aria-checked="true"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-state="checked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center text-current"
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox > Snapshots > matches default snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-state="unchecked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-disabled=""
  data-state="unchecked"
  data-testid="checkbox"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches error state snapshot 1`] = `
<div
  class="checkbox-wrapper"
>
  <div
    class="flex items-start space-x-2"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox checkbox--error"
      data-state="unchecked"
      data-testid="checkbox"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <p
        class="text-xs text-destructive"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox > Snapshots > matches loading state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox checkbox--loading"
  data-disabled=""
  data-state="unchecked"
  data-testid="checkbox"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox > Snapshots > matches required state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-state="unchecked"
  data-testid="checkbox"
  role="checkbox"
  type="button"
  value="on"
/>
`;
